(2003/04/29 - broeker) Check that a src file is a regular file before trying to
	               scan it.  Change from S_IFDIR/S_IFREG bit tests to 
		       macros S_ISDIR/S_ISREG.
(2003/03/05 - broeker) Remove '-y' option from pipe call to utility "sort".
	               It's long since deprecated, and some modern versions
		       will barf seeing it.
(2003/03/02 - broeker) Don't restrict to 14 character filenames any longer.
(2003/01/23 - broeker) Update to latest auto* tools.  First step towards
                       integration of GNOME GUI version.
(2002/12/11 - broeker) Get rid of deprecated ={...} style actions in egrep.y.
	               Use plain {...} instead.
(2002/10/29 - broeker) Fix bug #588671: disprefs was still 0 if only 1 very
	               long reference output shown by curses display.
(2002/08/27 - broeker) Fix bug #600494: use mygetenv() for HOME, and provide
	               a fall-back if it's not there.
(2002/08/15 - broeker) DOS/Cygwin bugfix: avoid setmode() if fopen() failed.
(2002/07/27 - broeker) Yet another round of Cygwin-related fixes.  Do the 
		       #include <fcntl.h> early enough, so checks for 
		       O_BINARY work.  Make sure that myexit() is always
		       called instead of calling exit() directly.  Add
		       AC_EXEEXT to configure.in.
(2002/07/10 - broeker) Get rid of assumption about values of access()
	               parameters W_OK and R_OK --- make assumptions only 
		       if system doesn't supply values.  Add check for 
		       existence of lstat(); fall back to stat() if not
		       available.  Avoid confusion of DOS' setmode() with
		       BSD function of same name...
(2002/07/07 - broeker) Delete tempfile before redirecting to it, to avoid 
	               complaints about clobbering from poorly configured 
		       default shells.
(2002/06/20 - broeker) Fix operation of -C -L0 if pattern contains any
	               upper-case characters.